Resolves tdf#80137 Paste array formula into range pastes as non-array formula

Reviewed-on: https://gerrit.libreoffice.org/14770
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 097a16b59884c777f724cec6c5d42734974ed44b)

Conflicts:
	sc/qa/unit/ucalc.cxx
	sc/qa/unit/ucalc.hxx

Change-Id: I500008b32e5af07702b76afb901a3ec270453462